--- a/sha_pro_cost_access/views/views.xml
+++ b/sha_pro_cost_access/views/views.xml
@@ -7,12 +7,12 @@
         <field name="inherit_id" ref="product.product_normal_form_view"/>
         <field name="arch" type="xml">
 
-            <xpath expr="//div[@name='standard_price_uom']//span" position="attributes">
-                <attribute name="groups">sysgates_pro_barcodes.group_access_product_cost</attribute>
+            <xpath expr="//field[@name='default_code']" position="before">
+                <field name="cost_readonly" invisible="1"/>
             </xpath>
 
-            <xpath expr="//field[@name='default_code']" position="before">
-                <div name="pricing11" class="o_row" groups="sha_pro_cost_access.group_access_product_cost"/>
+            <xpath expr="//field[@name='standard_price']" position="attributes">
+                <attribute name="readonly">cost_readonly</attribute>
             </xpath>
 
         </field>
@@ -24,12 +24,13 @@
         <field name="inherit_id" ref="product.product_template_only_form_view"/>
         <field name="arch" type="xml">
 
-            <xpath expr="//div[@name='standard_price_uom']//span" position="attributes">
-                <attribute name="groups">sysgates_pro_barcodes.group_access_product_cost</attribute>
+
+            <xpath expr="//field[@name='default_code']" position="before">
+                <field name="cost_readonly" invisible="1"/>
             </xpath>
 
-            <xpath expr="//field[@name='categ_id']" position="before">
-                <div name="pricing11" class="o_row" groups="sha_pro_cost_access.group_access_product_cost"/>
+            <xpath expr="//field[@name='standard_price']" position="attributes">
+                <attribute name="readonly">cost_readonly</attribute>
             </xpath>
 
         </field>
@@ -42,8 +43,12 @@
         <field name="inherit_id" ref="sale.view_order_form"/>
         <field name="arch" type="xml">
 
+            <xpath expr="//field[@name='order_line']//tree//field[@name='purchase_price']" position="before">
+                <field name="cost_readonly" column_invisible="1"/>
+            </xpath>
+
             <xpath expr="//field[@name='order_line']//tree//field[@name='purchase_price']" position="attributes">
-                <attribute name="groups">!sha_pro_cost_access.group_access_product_cost</attribute>
+                <attribute name="readonly">cost_readonly</attribute>
             </xpath>
 
         </field>
